[metadata]
name = image-render-actions-std
version = attr: catharsys.plugins.std.util.version.__version__

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    pyjson5
    tqdm

[options.packages.find]
where=src
exclude = dev

[options.package_data]
catharsys.plugins.std =
    scripts/*.py
    res/*.cu

[options.entry_points]
catharsys.ipy.render.std =
    /catharsys/plugins/std/result-data/image:1.0 = catharsys.plugins.std.ipy.cls_render_image_result_data:CIPyRenderImageResultData
    /catharsys/plugins/std/result-data/image-history:1.0 = catharsys.plugins.std.ipy.cls_render_image_result_data_history:CIPyRenderImageResultDataHistory

catharsys.html.render.std =
    /catharsys/plugins/std/result-data/image-db:1.0 = catharsys.plugins.std.html.cls_render_image_result_data_db_table:CHtmlRenderImageResultDataDbTable

catharsys.action =
    /catharsys/action/std/blender/post-render/proc-depth:1.0 = catharsys.plugins.std.python.actions.construct_depth
    /catharsys/action/std/blender/post-render/proc-flow:1.0 = catharsys.plugins.std.python.actions.construct_flow
    /catharsys/action/std/blender/post-render/proc-label:1.0 = catharsys.plugins.std.python.actions.construct_label
    /catharsys/action/std/blender/post-render/proc-rs:1.0 = catharsys.plugins.std.python.actions.construct_rs
    /catharsys/action/std/blender/post-render/proc-motion-blur:1.0 = catharsys.plugins.std.python.actions.construct_motion_blur
    /catharsys/action/std/blender/post-render/tonemap:1.0 = catharsys.plugins.std.python.actions.tonemap

catharsys.execute =
    /catharsys/exec/python/std:2.0 = catharsys.plugins.std.python.execute
    /catharsys/exec/python/lsf:2.0 = catharsys.plugins.std.python.execute
